fix deploy vercel

--- a/vercel.json
+++ b/vercel.json
@@ -2,8 +2,14 @@
     "version": 2,
     "builds": [
         {
-            "src": "index.html",
+            "src": "**/*",
             "use": "@vercel/static"
+        }
+    ],
+    "routes": [
+        {
+            "src": "/(.*)",
+            "dest": "/$1"
         }
     ]
 }
